--- a/index.css
+++ b/index.css
@@ -5,7 +5,9 @@ body {
   font-weight: weight;
   font-style: normal;
 }
-
+a {
+  color: rgba(235, 108, 173);
+}
 .vanilla-app {
   background-color: white;
   max-width: 600px;
@@ -13,4 +15,73 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+header {
+  border-bottom: 1px solid rgba(235, 108, 173);
+  padding: 0 0 30px 0;
+}
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  padding: 15px 20px;
+  width: 80%;
+  font-size: 16px;
+}
+
+.search-form-button {
+  background-color: rgb(235, 108, 173);
+  padding: 15px 20px;
+  font-size: 16px;
+  margin-left: 6px;
+  border: none;
+  border-radius: 6px;
+  color: white;
+}
+main {
+  padding: 40px 0;
+}
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+.weather-app-details {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  color: rgba(39, 33, 66, 0.4);
+}
+.weather-app-details strong {
+  color: #f65282;
+}
+
+.weather-itens-container {
+  display: flex;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.weather-icon {
+  font-size: 44px;
+  margin-top: 3cqw;
+}
+.weather-unit {
+  margin-top: 16px;
+  font-size: 28px;
+}
+footer {
+  border-top: 1px solid rgba(235, 108, 173);
+  font-size: 14px;
+  text-align: center;
+  padding: 30px 0 0 0;
+  color: rgba(0, 0, 0, 0.6);
 }
