--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ header {
   color: white;
 }
 main {
-  padding: 40px 0;
+  padding: 50px 0;
 }
 .weather-app-data {
   display: flex;
@@ -66,13 +66,13 @@ main {
 
 .weather-app-temperature {
   font-size: 88px;
-  margin-left: 10px;
+  line-height: 88px;
   font-weight: bold;
 }
 
 .weather-icon {
-  font-size: 44px;
-  margin-top: 3cqw;
+  font-size: 88px;
+  height: 88px;
 }
 .weather-unit {
   margin-top: 16px;
