--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@ body {
   background-color: #f9f7fe;
   font-family: "Reddit Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: weight;
   font-style: normal;
 }
 a {
@@ -75,24 +74,44 @@ main {
   height: 88px;
 }
 .weather-unit {
-  margin-top: 16px;
+  margin-top: 6px;
   font-size: 28px;
 }
 
 .weather-forecast {
-  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
 .forecast-date {
-  font-size: 16px;
-  opacity: 0.6;
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 20px;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
-.min-temperature {
-  opacity: 0.5;
+
+.forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .forecast-temperatures {
-  font-size: 13px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color: #f65282;
 }
+.max-temperature {
+  padding: 0 10px;
+}
+.min-temperature {
+  padding: 0 10px;
+  opacity: 0.5;
+}
+
 footer {
   border-top: 1px solid rgba(235, 108, 173);
   font-size: 16px;
