--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ a {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+  text-align: center;
 }
 header {
   border-bottom: 1px solid rgba(235, 108, 173);
@@ -118,4 +119,28 @@ footer {
   text-align: center;
   padding: 30px 0 0 0;
   color: rgba(0, 0, 0, 0.6);
+}
+
+@media (max-width: 900px) {
+  .vanilla-app {
+    text-align: center;
+    padding: 20px;
+  }
+  img {
+    display: flex;
+    margin-bottom: 20px;
+  }
+  .weather-app-temperature {
+    font-family: 10px;
+  }
+  form .search-form-input {
+    margin-bottom: 5px;
+  }
+  .weather-forecast-day {
+    margin-bottom: 30px;
+  }
+  .weather-forecast {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+  }
 }
